<resources>
    <string name="app_name">Force Wifi 5 GHz</string>
    <string name="author" translatable="false">erichambuch+apps@googlemail.com</string>
    <string name="action_info">FAQ</string>
    <string name="error_wifi_not_enabled">Wifi is not enabled!</string>
    <string name="error_no_5ghz_found">No networks with both frequencies and same SSID found!</string>
    <string name="error_no_location_enabled">Location services must be enabled to retrieve all Wifi Access Points around.</string>
    <string name="info_switch_wifi_5ghz">Trying to switch frequency &#8230;</string>
    <string name="info_5ghz_active">Wifi already connected with preferred frequency</string>
    <string name="text_listnetworks">Available networks with both 2.4/5 GHz:</string>
    <string name="title_activation">Automatic Force Wifi activated</string>
    <string name="text_activation_automatic_manuel">Automatic Mode activated. Switch to Manual Mode in Settings to define your preferred Wifis manually.</string>
    <string name="error_5ghz_not_configured">Please try to configure 5 GHz network with current SSID…</string>
    <string name="error_scan_failed_throttle">Wifi scan failed - throttling too many scans</string>
    <string name="error_scan_failed_wifi">Wifi scan failed - Wifi not available</string>
    <string name="app_description">Forces Wifi to switch to 5 GHz channels</string>
    <string name="title_2ghz5ghz">Choose preferred frequency</string>
    <string name="action_settings">Settings</string>
    <string name="action_ignore">Ignore</string>
    <string name="app_url" translatable="false">https://sites.google.com/site/erichambuch/forcewifi5</string>
    <string name="app_mailto" translatable="false">erichambuch+apps@googlemail.com</string>
    <string name="title_deacttived">Inactive</string>
    <string name="prefs_activation" translatable="false">prefs_activation</string>
    <string name="prefs_2ghz5ghz" translatable="false">prefs_ghz25switch</string>
    <string name="title_minimumlevel">Minimum signal level to switch over</string>
    <string name="prefs_signallevel" translatable="false">prefs_signallevel</string>
    <string name="summary_activation">Activate or de-activate the functionality to switch automatically the frequency of your Wifi. If disabled, you can still select your preferred Wi-Fis manually.</string>
    <string name="summary_2ghz5ghz">Choose your preferred frequency - either 2.4 GHz or 5 GHz if supported</string>
    <string name="summary_signallevel">Define the minimum signal level to switch over to another frequency. This avoids switching to a weaker network.</string>
    <string name="title_settings">Settings</string>
    <string name="text_wififound">Found the following Wifi access points with same SSID and 2.4/5 GHz - trying to switch to preferred one. This may take some time or multiple network switches.</string>
    <string name="text_nowififound">You don\’t have any Wifi access points with both 2.4 and 5 GHz band on same SSID nearby. Please find another Wifi access point
	with multiple frequencies on the same SSID to make use of this app.</string>
    <string name="error_not_android10">Found the following Wifi access points with same SSID and 2.4/5 GHz - trying to switch to preferred one. Please note: Starting with Android 10 you probably have to disable and then re-connect your Wifi manually!</string>
    <string name="prefs_switchnetwork" translatable="false">prefs_switchnetworkssid</string>
    <string name="title_switchnetwork">Switch to other network</string>
    <string name="summary_switchnetwork">Choose another network (SSID) with the desired frequency instead of staying with the same SSID</string>
    <string name="info_switch_wifi_5ghz_android10">Please re-connect to your Wifi manually or reboot the device to change frequency</string>
    <string name="message_welcome"><![CDATA[<p>I wrote this app to force my devices to the less used 5 GHz channels of my Wifi network.</p><br/><p>Unfortunately starting with Android 10, apps cannot <em>force</em> the system to change the Wifi channel, but only give a <em>recommendation</em> to do so.</p><br/><p>Therefore this app <em>MAY or MAY NOT</em> work on your device. Please give a try. In certain cases you will have to disable and enable your Wifi manually once or even reboot your device in order to get an effect.</p><p>If it\'s not working, just de-install it.</p><br/>
    <p>The app makes use of <a href="https://https://firebase.google.com/support/privacy">Firebase Crashlytics</a> to identify failures while using the app. You may enable or disable the data transfer in the <em>Settings</em>. For more details please refer to the <a href="https://https://sites.google.com/site/erichambuch/dataprotection">Data protection details</a>.</p><p>Any feedback is welcome - just drop me an email.</p>]]></string>
    <string name="message_activate_locationservices"><![CDATA[<p>This app requires access to all wireless networks nearby. Therefore <em>Location Services</em> must be enabled in order to retrieve a list of all Wifis. This is a requirement enforced by Android.<br/>Without the app WILL NOT work.<br/><p>The app will never try to locate your position or similar.</p>]]></string>
    <string name="message_activate_notifications">This app requires to display notifications, otherwise functionality may be limited. Please enanble notifications in the app settings.</string>
    <string name="error_switch_wifi_android10">Error while setting suggestion for wifi</string>
    <string name="error_permission_missing">Permission to access Wifis state has been revoked!</string>
    <string name="message_batteryoptimizations"><![CDATA[<p>Under Android 12+ you will have to disable the <em>Battery Optimizations</em> for this app.</p><br/><p>Please open the Settings and grant an exception to this app by selecting the app and choosing <em>Don\'t optimize</em> as well as removing any <em>Background restrictions</em>.</p><p>Not disabling battery optimizations may result a forced stop of this app by Android.</p>]]></string>
    <string name="error_permission_duplicate">Error while setting duplication suggestion for Wifi - try to start app again.</string>
    <string name="error_suggestion_not_taken">Android did not follow suggestion for Wifi - try to dis-connect, wait for at least 60 secs and reconnect manually</string>
    <string name="error_no_permissions_provived">This app lacks of the required permissions for Location Services and Wifi access. Please open the Settings and grant the necessary permissions.</string>
    <string name="summary_permission_settings">Open permission settings of app. This app needs permissions for Wifi, Location and Notifications in order to work.</string>
    <string name="summary_location_settings">Open location services settings. This app needs location services enabled in order to retrieve a list of all Wifi access points.</string>
    <string name="title_permission_settings">Permission settings</string>
    <string name="title_location_settings">Location settings</string>
    <string name="title_app_settings">App settings</string>
    <string name="summary_app_settings">Open settings of this app. Use to remove Background Restrictions and fix permissions or battery optimization settings.</string>
    <string name="prefs_location_settings" translatable="false">prefs_location_settings</string>
    <string name="prefs_permission_settings" translatable="false">prefs_permission_settings</string>
    <string name="prefs_app_settings" translatable="false">prefs_app_settings</string>
    <string name="prefs_battery_settings" translatable="false">prefs_battery_settings</string>
    <string-array name="entries25ghz">
        <item>2.4 GHz</item>
        <item>5 GHz</item>
        <item>6 GHz</item>
        <item>60 GHz</item>
    </string-array>
    <string-array name="values25ghz">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="emptyarray">
    </string-array>
    <string name="text_nowifi">No Wifi access point connected</string>
    <string name="text_nowifirecommended">No Wifi access point recommended</string>
    <string name="error_scan_succesful">Wifi scan successful</string>
    <string name="wifi_settings">Wifi settings</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">ForceWifi5 Widget</string>
    <string name="title_unknown">Unknown</string>
    <string name="error_not_supported">Function not supported on your phone</string>
    <string name="prefs_widget_settings" translatable="false">prefs_widget_settings</string>
    <string name="message_requestpermission_rationale"><![CDATA[<p>This app requires several permissions settings in order to work properly. Please grant them all:</p><ol><li><b> Access to your location</b> - this is mandatory by Android to determinate all Wifi access points nearby</li><li><b> Enabled location services</b> - and your <em>Location Services</em> must be enabled too</li><li><em><b> Battery optimization modes</b></em> should be deactived to keep the app running in background</li><li>… and you may be asked when the app proposes another Wifi. Please say ‘Yes’, because thats the only purpose of this app.</li></ol>
<br/><p>The app makes use of <a href="https://https://firebase.google.com/support/privacy">Firebase Crashlytics</a> to identify failures while using the app. You may enable or disable the data transfer in the <em>Settings</em>. For more details please refer to the <a href="https://https://sites.google.com/site/erichambuch/dataprotection">Data protection details</a>.</p>]]></string>
    <string name="title_sendfeedback">Provide feedback</string>
    <string name="feedback_subject">Feedback on ForceWifi5</string>
    <string name="error_cannot_display_recommended_wifi">Cannot display suggested Wifi list</string>
    <string name="message_requestpermissionnotifications_rationale">Starting with Android 13, you will also have to provide an extra permission to allow notifications. So please active notifications for this app.</string>
    <string name="error_no_permissions_notification">Please grant the NOTIFICATION permission in the app settings!</string>
    <string name="message_nosupport">This app requires that your Android device supports multi-band Wifi - so 2.4 GHz as well as 5 or 6 GHz. Obviously this is not the case. Therefore please de-install it.</string>
    <string name="action_about">About</string>
    <string name="prefs_developer_settings" translatable="false">prefs_developer_settings</string>
    <string name="title_batt_optimization_settings">Battery optimization settings</string>
    <string name="summary_batt_optimization_settings">Open battery optimization settings to disable all optimizations for this app. This is required for Android 12 and above.</string>
    <string name="title_developer_settings">Developer Settings</string>
    <string name="description_developer_settings">You can switch off the Wifi scanning Throttling in the Developer Options &gt; Networking &gt; Wi-Fi scan throttling</string>
    <string name="text_wifi">Wi-Fi</string>
    <string name="description_wifi">Select Wi-Fi</string>
    <string name="text_reset_suggestions">Reset</string>
    <string name="text_preferred">Preferred Wifis</string>
    <string name="action_contact">Contact</string>
    <string name="action_reload">Reload</string>
    <string name="text_active_wifi">Active Wifi</string>
    <string name="text_available_wifis">Available Wifis</string>
    <string name="action_save">Save</string>
    <string name="action_manualmode">Manual Mode</string>
    <string name="action_privacyoptions">Privacy options</string>
    <string name="action_data_protection">Privacy Statement</string>
    <string name="text_setup">Setup</string>
    <string name="action_notworking">Not Working?</string>
</resources>