<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:orientation="vertical"
    android:textAlignment="center"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adViewContainer"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/nowificardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Emphasized"
            android:text="@string/error_no_permissions_provived"
            android:visibility="visible"
            app:cardBackgroundColor="@android:color/holo_red_light"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageButton
                    android:id="@+id/closeCardBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="Close"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/white" />

                <TextView
                    android:id="@+id/nowifitextview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toTopOf="@id/cardActionModeBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/closeCardBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Emphasized"
                    android:text="@string/text_nowififound"
                    android:textColor="@android:color/white"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardActionModeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/nowifitextview"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.Material3.Button.TextButton.Dialog"
                    android:text="@string/action_manualmode"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_active_wifi"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/activatedWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No Wifi"
            android:background="?attr/colorSurfaceContainerHigh"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall.Emphasized"
            android:padding="8dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_preferred"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_marginBottom="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wifiListPreferred"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorSurfaceContainerLow"
                android:dividerHeight="2dp"
                android:orientation="vertical"
                android:scrollbars="vertical"/>

            <TextView
                android:id="@+id/wifiListPreferredOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_activation_automatic_manuel"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_available_wifis"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorSurfaceContainerLow"
            android:layout_weight="1"
            android:dividerHeight="2dp"
            android:orientation="vertical"
            android:scrollbars="vertical" />
    </LinearLayout>

    <!--  AdMob, add divider for policy  -->
    <FrameLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/coordinator_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="4dp">
    </FrameLayout>

    <!-- Here we need a hack: The CoordinatorLayout makes all children overlapping each other, so we embed the CoordinatorLayout with the AppBar
    into a RelativeLayout and set the margins fixed to 80dp, which is the height of the Material3 AppBar... -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:textAlignment="center">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.Material3.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fitsSystemWindows="true"
            android:gravity="fill_horizontal"
            app:fabAlignmentMode="end"
            app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
            app:menu="@menu/bottom_app_bar"
            app:menuAlignmentMode="start"
            app:paddingBottomSystemWindowInsets="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_save"
            app:srcCompat="@drawable/baseline_save_alt_24"
            app:layout_anchor="@id/bottomAppBar"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>
